# telnyx-llm-call

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
src/telnyx_transcribe/: __init__.py  __main__.py  app.py  cli.py  config.py  exceptions.py  models.py
src/telnyx_transcribe/services/: __init__.py  call_service.py  output_service.py  transcription_service.py
src/telnyx_transcribe/utils/: __init__.py  console.py  logging.py
src/telnyx_transcribe/webhooks/: __init__.py  handlers.py
tests/: __init__.py  test_config.py  test_models.py
